# m_02_08

./: README.md  pyproject.toml
task_01_MongoDB/: main.py
task_01_MongoDB/db/: authors.json  loader.py  models.py
task_02_RabbitMQ/: email_consumer.py  fill_data.py  models.py  producer.py  sms_consumer.py
