[tool.poetry]
name = "m02-08"
version = "0.1.0"
description = ""
authors = ["Andrew <sideroalogo8@gmail.com>"]
readme = "README.md"
packages = [{include = "m02_08"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
configparser = "^6.0.0"
certifi = "^2023.7.22"
wheel = "^0.41.2"
pika = "^1.3.2"
faker = "^19.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
